chore: update backend judge page demo link

--- a/signal-backend/public/index.html
+++ b/signal-backend/public/index.html
@@ -86,7 +86,7 @@
       </p>
       <a
         class="cta"
-        href="https://www.youtube.com/results?search_query=Signal+iOS+app+demo"
+        href="https://www.youtube.com/watch?v=bh-UjhOsnSw"
         target="_blank"
         rel="noopener noreferrer"
         >Watch the YouTube demo</a
