docs: update demo link

--- a/signal-backend/public/index.html
+++ b/signal-backend/public/index.html
@@ -86,7 +86,7 @@
       </p>
       <a
         class="cta"
-        href="https://www.youtube.com/watch?v=bh-UjhOsnSw"
+        href="https://youtu.be/H9j7-wSRR-I"
         target="_blank"
         rel="noopener noreferrer"
         >Watch the YouTube demo</a
